==> alejoseb/Modbus-PI-Pico-FreeRTOS/MODBUS-LIB/Src/Modbus.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "queue.h"
#include "Modbus.h"
#include "timers.h"
#include "semphr.h"
#define GPIO_PIN_RESET 0
#define GPIO_PIN_SET   1
#define bitRead(value, bit) (((value) >> (bit)) & 0x01)
#define bitSet(value, bit) ((value) |= (1UL << (bit)))
#define bitClear(value, bit) ((value) &= ~(1UL << (bit)))
#define bitWrite(value, bit, bitvalue) ((bitvalue) ? bitSet(value, bit) : bitClear(value, bit))
#define lowByte(w) ((w) & 0xff)
#define highByte(w) ((w) >> 8)
#define STACK_SIZE 128 * 4

void ModbusInit(modbusHandler_t * modH)
{
	
	if (numberHandlers < MAX_M_HANDLERS)
    {
	    //Create QueueModbus //Queue Modbus RX
	    //modH->QueueModbusHandle = osMessageQueueNew (MAX_BUFFER, sizeof(uint8_t), &QueueModbus_attributes);
        RingClear(&modH->xBufferRX);

	    if(modH->EN_Port)
		{
			gpio_init(modH->EN_Pin);
            gpio_set_dir(modH->EN_Pin, GPIO_OUT);
		}
       	    
	    if(modH->uModbusType == MB_SLAVE)
	    {		   		
		    xTaskCreate ((TaskFunction_t)StartTaskModbusSlave, "TaskModbusSlave", (uint16_t)(STACK_SIZE), modH, osPriorityLow, &modH->myTaskModbusAHandle);
			if( modH->myTaskModbusAHandle == NULL) 
		    {
		       while(1); //error creating modbus task
		    }		
	    }
	    else if (modH->uModbusType == MB_MASTER)	  
	    {
	        xTaskCreate ((TaskFunction_t)StartTaskModbusMaster, "TaskModbusMaster", (uint16_t)(STACK_SIZE), modH, osPriorityLow,  &modH->myTaskModbusAHandle);
			if( modH->myTaskModbusAHandle == NULL) 
		    {
		       while(1); //error creating modbus task
		    }

			 modH->xTimerTimeout=xTimerCreate("xTimerTimeout",  // Just a text name, not used by the kernel.
				  	  	modH->u16timeOut ,     		// The timer period in ticks.
						pdFALSE,         // The timers will auto-reload themselves when they expire.
						( void * )modH->xTimerTimeout,     // Assign each timer a unique id equal to its array index.
						(TimerCallbackFunction_t) vTimerCallbackTimeout  // Each timer calls the same callback when it expires.
                  	  	);

		    if(modH->xTimerTimeout == NULL)
		    {
			    while(1); //error creating timer, check heap and stack size
		    }

		    modH->QueueTelegramHandle = xQueueCreate(MAX_TELEGRAMS, sizeof(modbus_t));
		    if(modH->QueueTelegramHandle == NULL)
		    {
			    while(1); //error creating queue for telegrams, check heap and stack size
		    }

		}
	    //Create Semaphore DataRX
	    //vSemaphoreCreateBinary(SemaphoreDataRX);
	    //Create timer T35

	    modH->xTimerT35 = xTimerCreate("TimerT35",         // Just a text name, not used by the kernel.
		  	  	  	  	  	  	  	5 ,     // The timer period in ticks.
                                    pdFALSE,         // The timers will auto-reload themselves when they expire.
									( void * )modH->xTimerT35,     // Assign each timer a unique id equal to its array index.
                                    (TimerCallbackFunction_t) vTimerCallbackT35     // Each timer calls the same callback when it expires.
                                    );

	    if (modH->xTimerT35 == NULL)
	    {
		  while(1); //Error creating the timer, check heap and stack size
	    }

	    modH->ModBusSphrHandle = xSemaphoreCreateBinary();
		if(modH->ModBusSphrHandle == NULL)
	    {
		  while(1); //Error creating the semaphore, check heap and stack size
	    }
		if (xSemaphoreGive (modH->ModBusSphrHandle) != pdPASS) 
		{
         while(1);
        }


	 
  	    mHandlers[numberHandlers] = modH;
	    numberHandlers++;
    }
    else
    {
	  while(1); //error no more Modbus handlers supported
    }

}

void ModbusStart(modbusHandler_t * modH)
{
	if(modH->xTypeHW != USART_HW && modH->xTypeHW != TCP_HW && modH->xTypeHW != USB_CDC_HW)
	{

		while(1); //ERROR select the type of hardware
	}

	if (modH->xTypeHW == USART_HW )
	{

	    if (modH->EN_Port )
        {
            // return RS485 transceiver to transmit mode
            //HAL_GPIO_WritePin(modH->EN_Port, modH->EN_Pin, GPIO_PIN_RESET);
			gpio_put(modH->EN_Pin, 0);
        }

        if (modH->uModbusType == MB_SLAVE &&  modH->u16regs == NULL )
        {
         	while(1); //ERROR define the DATA pointer shared through Modbus
        }

        //check that port is initialized
        
		while(uart_get_index(modH->port) != 0  && uart_get_index(modH->port) != 1)
        {
			while(1); //ERROR usart port number is not supported
        }
        


		// Receive data from serial port for Modbus using interrupt
        /*
		if(HAL_UART_Receive_IT(modH->port, &modH->dataRX, 1) != HAL_OK)
        {
            while(1)
            {
           	    //error in your initialization code
            }
        }
		*/



        // Set up a RX interrupt
        // We need to set up the handler first
        // Select correct interrupt for the UART we are using
        int UART_IRQ = modH->port == uart0 ? UART0_IRQ : UART1_IRQ;

        // And set up and enable the interrupt handlers
        irq_add_shared_handler(UART_IRQ, UART_IRQ_service, PICO_SHARED_IRQ_HANDLER_DEFAULT_ORDER_PRIORITY);
        irq_set_enabled(UART_IRQ, true);

        // Now enable the UART to send interrupts - RX only
        uart_set_irq_enables( modH->port, true, false);


		  
        if(modH->u8id !=0 && modH->uModbusType == MB_MASTER )
        {
            while(1)
        	{
        	    //error Master ID must be zero
        	}
        }

        if(modH->u8id ==0 && modH->uModbusType == MB_SLAVE )
        {
            while(1)
            {
                  	     	  //error Master ID must be zero
            }
        }
	}

    modH->u8lastRec = modH->u8BufferSize = 0;
    modH->u16InCnt = modH->u16OutCnt = modH->u16errCnt = 0;
}

int16_t getRxBuffer(modbusHandler_t *modH)
{

    int16_t i16result;

	//HAL_UART_AbortReceive_IT(modH->port); // disable interrupts to avoid race conditions on serial port

	
	// Now disable the UART to send interrupts
    uart_set_irq_enables( modH->port, false, false);
	
	if (modH->xBufferRX.overflow)
    {
       	RingClear(&modH->xBufferRX); // clean up the overflowed buffer
       	i16result =  ERR_BUFF_OVERFLOW;
    }
	else
	{
		modH->u8BufferSize = RingGetAllBytes(&modH->xBufferRX, modH->u8Buffer);
		modH->u16InCnt++;
		i16result = modH->u8BufferSize;
	}

    while(uart_is_readable(modH->port))
	{
		uart_getc(modH->port); // clean the input RX
	}
	uart_set_irq_enables( modH->port, true, false);

    return i16result;
}

static void sendTxBuffer(modbusHandler_t *modH)
{
    // append CRC to message

	uint16_t u16crc = calcCRC(modH->u8Buffer, modH->u8BufferSize);
    modH->u8Buffer[ modH->u8BufferSize ] = u16crc >> 8;
    modH->u8BufferSize++;
    modH->u8Buffer[ modH->u8BufferSize ] = u16crc & 0x00ff;
    modH->u8BufferSize++;

    if (modH->EN_Port)
    {
            // set RS485 transceiver to transmit mode
        	//HAL_GPIO_WritePin(modH->EN_Port, modH->EN_Pin, GPIO_PIN_SET);
			gpio_put(modH->EN_Pin, GPIO_PIN_SET);
    }

        // transfer buffer to serial line
    //HAL_UART_Transmit_IT(modH->port, modH->u8Buffer,  modH->u8BufferSize);
	uint16_t i;

	for (i=0; i < modH->u8BufferSize ; i++ )
	{
		while(!uart_is_writable(modH->port) )
		{
			// wait for space to TX
		}
		uart_putc(modH->port, modH->u8Buffer[i]);
	}
	
	while(( uart_get_hw(modH->port)->fr & UART_UARTFR_BUSY_BITS ) )
	{
		//This bit remains set until the complete byte, including all the stop bits, has been sent from the shift register.
	}
	
    if (modH->EN_Port )
    {
             // must wait transmission end before changing pin state
             //return RS485 transceiver to receive mode

        	 //HAL_GPIO_WritePin(modH->EN_Port, modH->EN_Pin, GPIO_PIN_RESET);
			 gpio_put(modH->EN_Pin, GPIO_PIN_RESET);
    }

    // set timeout for master query
    if(modH->uModbusType == MB_MASTER )
    {
 	    xTimerReset(modH->xTimerTimeout,0);
    }

    modH->u8BufferSize = 0;
    // increase message counter
    modH->u16OutCnt++;

}
